Addressing issue #3, there is now a loading modal dialog that pops up when the calculate button is hit, changes the message if the wait becomes too long, and disappears when the data comes back or the user chooses to submit again.

--- a/atsenscalc/web/interactive_senscalc.css
+++ b/atsenscalc/web/interactive_senscalc.css
@@ -108,6 +108,7 @@ h3 { font-family: 'Oxygen', sans-serif; margin-left: 0.5em; }
 .md-modal-image { max-width: 800px; border: 2px solid black; }
 .md-content {  color: white;  background-color: #e74c3c; border-radius: 3px; }
 .md-content-image { color: black;  background-color: white; }
+.md-content-loading { color: white; background-color: #007A53; }
 .md-content h3 { color: white; background: rgba(0,0,0,0.1); border-radius: 3px 3px 0 0;
 		 opacity: 0.8; font-weight: 300; font-size: 2.4em; text-align: center;
 		 padding: 0.4em; }
@@ -121,6 +122,8 @@ h3 { font-family: 'Oxygen', sans-serif; margin-left: 0.5em; }
 #results-spectral-rms-image { cursor: pointer; }
 #modal-spectral-rms-image { max-width: 90%; }
 .md-show { visibility: visible; }
+.md-hidden-message { visibility: hidden; }
+#loading-too-long { color: yellow; font-weight: bold; }
 
 .md-effect-1 .md-content {
         -webkit-transform: scale(0.7);
@@ -358,4 +361,188 @@ input[type=radio]:checked + label {
     /* reduce the damage in FF3.0 */
     display:block; 
     width:0;
+}
+
+/* ======================================
+== THE LOADING DIALOG'S BUBBLE BAR
+** ====================================== */
+
+#fountainG {
+    margin:0px auto;
+    position:relative;
+    width:240px;
+    height:29px;
+}
+
+.fountainG {
+    position:absolute;
+    top:0;
+    background-color:#FFFFFF;
+    width:29px;
+    height:29px;
+    -moz-animation-name:bounce_fountainG;
+    -moz-animation-duration:1.3s;
+    -moz-animation-iteration-count:infinite;
+    -moz-animation-direction:normal;
+    -moz-transform:scale(.3);
+    -moz-border-radius:19px;
+    -webkit-animation-name:bounce_fountainG;
+    -webkit-animation-duration:1.3s;
+    -webkit-animation-iteration-count:infinite;
+    -webkit-animation-direction:normal;
+    -webkit-transform:scale(.3);
+    -webkit-border-radius:19px;
+    -ms-animation-name:bounce_fountainG;
+    -ms-animation-duration:1.3s;
+    -ms-animation-iteration-count:infinite;
+    -ms-animation-direction:normal;
+    -ms-transform:scale(.3);
+    -ms-border-radius:19px;
+    -o-animation-name:bounce_fountainG;
+    -o-animation-duration:1.3s;
+    -o-animation-iteration-count:infinite;
+    -o-animation-direction:normal;
+    -o-transform:scale(.3);
+    -o-border-radius:19px;
+    animation-name:bounce_fountainG;
+    animation-duration:1.3s;
+    animation-iteration-count:infinite;
+    animation-direction:normal;
+    transform:scale(.3);
+    border-radius:19px;
+}
+
+#fountainG_1 {
+    left:0;
+    -moz-animation-delay:0.52s;
+    -webkit-animation-delay:0.52s;
+    -ms-animation-delay:0.52s;
+    -o-animation-delay:0.52s;
+    animation-delay:0.52s;
+}
+
+#fountainG_2 {
+    left:30px;
+    -moz-animation-delay:0.65s;
+    -webkit-animation-delay:0.65s;
+    -ms-animation-delay:0.65s;
+    -o-animation-delay:0.65s;
+    animation-delay:0.65s;
+}
+
+#fountainG_3 {
+    left:60px;
+    -moz-animation-delay:0.78s;
+    -webkit-animation-delay:0.78s;
+    -ms-animation-delay:0.78s;
+    -o-animation-delay:0.78s;
+    animation-delay:0.78s;
+}
+
+#fountainG_4 {
+    left:90px;
+    -moz-animation-delay:0.91s;
+    -webkit-animation-delay:0.91s;
+    -ms-animation-delay:0.91s;
+    -o-animation-delay:0.91s;
+    animation-delay:0.91s;
+}
+
+#fountainG_5 {
+    left:120px;
+    -moz-animation-delay:1.04s;
+    -webkit-animation-delay:1.04s;
+    -ms-animation-delay:1.04s;
+    -o-animation-delay:1.04s;
+    animation-delay:1.04s;
+}
+
+#fountainG_6 {
+    left:150px;
+    -moz-animation-delay:1.17s;
+    -webkit-animation-delay:1.17s;
+    -ms-animation-delay:1.17s;
+    -o-animation-delay:1.17s;
+    animation-delay:1.17s;
+}
+
+#fountainG_7 {
+    left:180px;
+    -moz-animation-delay:1.3s;
+    -webkit-animation-delay:1.3s;
+    -ms-animation-delay:1.3s;
+    -o-animation-delay:1.3s;
+    animation-delay:1.3s;
+}
+
+#fountainG_8 {
+    left:210px;
+    -moz-animation-delay:1.43s;
+    -webkit-animation-delay:1.43s;
+    -ms-animation-delay:1.43s;
+    -o-animation-delay:1.43s;
+    animation-delay:1.43s;
+}
+
+@-moz-keyframes bounce_fountainG{
+0%{
+    -moz-transform:scale(1);
+    background-color:#FFFFFF;
+}
+
+100%{
+    -moz-transform:scale(.3);
+    background-color:#9FAEE5;
+}
+
+}
+
+@-webkit-keyframes bounce_fountainG{
+0%{
+    -webkit-transform:scale(1);
+    background-color:#FFFFFF;
+}
+
+100%{
+    -webkit-transform:scale(.3);
+    background-color:#9FAEE5;
+}
+
+}
+
+@-ms-keyframes bounce_fountainG{
+0%{
+    -ms-transform:scale(1);
+    background-color:#FFFFFF;
+}
+
+100%{
+    -ms-transform:scale(.3);
+    background-color:#9FAEE5;
+}
+
+}
+
+@-o-keyframes bounce_fountainG{
+0%{
+    -o-transform:scale(1);
+    background-color:#FFFFFF;
+}
+
+100%{
+    -o-transform:scale(.3);
+    background-color:#9FAEE5;
+}
+
+}
+
+@keyframes bounce_fountainG{
+0%{
+    transform:scale(1);
+    background-color:#FFFFFF;
+}
+
+100%{
+    transform:scale(.3);
+    background-color:#9FAEE5;
 }
